# ARC-MTQE

./: .gitignore  Makefile  README.md  pyproject.toml  results_ensembel_dev.csv  results_ensemble_test.csv  results_max.csv  results_max_dev.csv  results_max_test.csv
configs/: README.md  base_models.yaml  experiment_group_1.yaml  hparams_1.yaml  hparams_10.yaml  hparams_11.yaml  hparams_12.yaml  hparams_13.yaml  hparams_14.yaml  hparams_15.yaml  hparams_2.yaml  hparams_3.yaml  hparams_4.yaml  hparams_5.yaml  hparams_6.yaml  hparams_7.yaml  hparams_8.yaml  hparams_9.yaml  hparams_en_cs_01.yaml  hparams_en_cs_02.yaml  hparams_en_cs_03.yaml  hparams_en_cs_04.yaml  hparams_en_cs_05.yaml  hparams_en_cs_06.yaml  hparams_en_cs_07.yaml  hparams_en_cs_08.yaml  hparams_en_de_01.yaml  hparams_en_de_02.yaml  hparams_en_de_03.yaml  hparams_en_de_06.yaml  hparams_en_de_07.yaml  hparams_en_de_08.yaml  hparams_en_ja_01.yaml  hparams_en_ja_02.yaml  hparams_en_ja_03.yaml  hparams_en_ja_05.yaml  hparams_en_ja_06.yaml  hparams_en_ja_07.yaml  hparams_en_zh_01.yaml  hparams_en_zh_02.yaml  (+27 more)
notebooks/: README.md  annotator_agreement.ipynb  comet_kiwi.ipynb  comets_compare.ipynb  create_tables.ipynb  data_explore.ipynb  metrics.ipynb  sig_analysis.ipynb  unbabel_mqm.ipynb
notes/: BASKERVILLE.md  Baskerville.md  COMET.md  configs.md  data.md  models.md
scripts/: README.md  baseline_eval.py  comet_kiwi.py  comets_compare.py  conda_setup.sh  data_preprocess.py  eda_ced.py  eval.py  eval_ced.py  eval_da.py  explore_tokens.py  extract_gpt_responses.py  generate_eval_scripts.py  generate_pred_scripts.py  generate_train_scripts.py  interactive_setup.sh  llm_ced.py  predict_ced.py  predict_da.py  slurm_template.sh  slurm_train_all.sh  temp_train.sh  (+3 more)
(+1027 files in other folders)
