[tool.poetry]
name = "MTQE"  
version = "0.1.0"
description = "" 
authors = ["Applied Research Centre, The Alan Turing Institute <arc@turing.ac.uk>"]  
readme = "README.md"

[tool.poetry.dependencies]
huggingface_hub = "0.12.1"
python = ">=3.9,<4.0.0"  
unbabel-comet= "2.0.1"
ipywidgets = "^8.1.1"
torch = "2.0.1"
pytorch-lightning = "1.9.5"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
scikit-learn = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"