[tool.poetry]
name = "MTQE"
version = "0.1.0"
description = ""
authors = ["Applied Research Centre, The Alan Turing Institute <arc@turing.ac.uk>"]
readme = "README.md"
packages = [{include = "mtqe", from="src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
scikit-learn = "^1.4.0"
openai = "^1.14.0"
huggingface-hub = "^0.21.3"
unbabel-comet = "^2.2.1"
wandb = "^0.16.4"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[tool.isort]
profile = "black"
